--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,23 @@ html {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-weight: bold;
 }
-.NE-W{
-	color: #fbfbfb;
-	
+.name{
+	height: 35px;
+	width: 300px;
 
+
+}
+.title {
+	display:inline-block;
+	font-family:Bookman, URW Bookman L, serif;
+	font-size:60px;
+	
+	line-height:71px;
+	text-transform:uppercase;
+	letter-spacing:-3px;
+	color:#494949;
+	padding-top: 10px;
+	background:url(../images/pic-2.gif) right 0 repeat-y
 }
 body {
 	font-family:Arial, Helvetica, sans-serif;
