--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,15 @@ html {
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-weight: bold;
 }
+.NE-W{
+	color: #fbfbfb;
+	
+
+}
 .name{
 	height: 35px;
 	width: 300px;
+	
 
 
 }
@@ -32,6 +38,7 @@ html {
 	padding-top: 10px;
 	background:url(../images/pic-2.gif) right 0 repeat-y
 }
+
 body {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:100%;
@@ -129,6 +136,11 @@ p {
 	
 	
 }
+div.static {
+	position: static;
+	border-bottom: 3px solid #73AD21;
+	
+  }
 .p1 {
 	margin-bottom:8px
 }
@@ -166,27 +178,36 @@ p {
 	letter-spacing:-1px
 }
 .color-1 {
-	color:rgb(0, 200, 255);
+	color:rgb(255, 99, 99);
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: bold;
-	font-size: 70PX;
+	font-size: 50PX;
+	padding-left: 15px;
+	margin-top: 20px;
+}
+.color-p1 {
+	color:rgb(255, 99, 99);
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: bold;
+	font-size: 50PX;
+	padding-left: px;
 	margin-top: 20px;
 }
 .color-p {
 	padding-top: 13px;
 }
 .color-11 {
-	color:#fff;
+	color:#303030;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: bold;
-	font-size: 50PX;
+	font-size: 40PX;
 	margin-top: 45px;
 }
 .color-11-1 {
-	color:#fff;
+	color:#303030;
 	font-family: 'Times New Roman', Times, serif;
 	font-weight: bold;
-	font-size: 50PX;
+	font-size: 40PX;
 	margin-top: 16px;
 }
 
@@ -194,18 +215,21 @@ p {
 	color:#000
 }
 .color-2-1 {
-	color: rgb(31, 113, 255);
+	color: #fd4747;
+	-webkit-text-stroke: rgb(107, 1, 1);
+	-webkit-text-stroke-width: 0.5px;
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	font-size:40PX;
-	padding-left: 60px;
+	padding-left:70px;
 	
 }
 .color-2-2 {
 	color:rgb(0, 0, 0);
 	font-family: Brush Script MT, Brush Script Std, cursive	;
 	font-size:15PX;
-	padding-left: 300px;
-	padding-top: 10px;
+	padding-left: 0px;
+	padding-top: 15px;
+	
 }
 .color-2-3 {
 	
@@ -289,7 +313,7 @@ p {
 	padding-right:10px
 }
 .indent-left {
-	padding-left:30px
+	padding-left:10px
 }
 .indent {
 	padding:0 10px 0 30px
@@ -298,7 +322,8 @@ p {
 	padding-left:50px
 }
 .indent3 {
-	padding:0 15px
+	padding:0 15px;
+	
 }
 .indent-bot {
 	margin-bottom:20px
@@ -358,7 +383,7 @@ header {
 	position: fixed;
 	width:100%;
 	height:71px;
-	background:url(../images/row1-top-tail.gif) left top repeat-x
+	
 }
 .r2 {
 	
@@ -396,7 +421,7 @@ h1 span {
 	letter-spacing:-2px
 }
 .logo strong {
-	color:#ff9601;
+	color:#fd4747;
 	font-weight:normal
 }
 /***** menu *****/
@@ -729,19 +754,7 @@ h3 {
 h6 {
 	color:#ff9601
 }
-.title {
-	display:inline-block;
-	font-family:Bookman, URW Bookman L, serif;
-	font-size:60px;
-	
-	line-height:71px;
-	text-transform:uppercase;
-	letter-spacing:-3px;
-	color:#494949;
-	padding:0 25px 0 0;
-	padding-top: px;
-	background:url(../images/pic-2.gif) right 0 repeat-y
-}
+
 .title.t2 {
 	font-size:60px;
 	line-height:1.3em;
@@ -759,7 +772,14 @@ h6 {
 }
 .box {
 	width:100%;
-	background:rgb(235, 252, 208);
+	background:rgb(253, 227, 227);
+	box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70);
+	-moz-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70);
+	-webkit-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70)
+}
+.box-2 {
+	width:100%;
+	background:rgb(223, 208, 252);
 	box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70);
 	-moz-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70);
 	-webkit-box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.70)
